--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
     buildFeatures {
         viewBinding true
     }
+    namespace 'ru.igla.duocamera'
 }
 
 def lifecycle_version = "2.3.1"
